src/styles.css
body {
  background-image: url("traffic_cars_road_travel.jpg"); /* image source: https://free-images.com/display/traffic_cars_road_travel.html */
  background-repeat: repeat;
  background-attachment: fixed;
  text-align: center;
  color: #1A2B53;
  background-color: #676C68;
  font-family: "Roboto", sans-serif;
}

li {
  text-align: left;
}

.expand_box{
  background-color: #ffffff;
  color: #000000;
  padding: 10px;
  border-radius: 10px;
  width: 80%; 
  margin-top: -40px;
}

h3 {
  text-align: left;
  color: #1A2B53;
}

figcaption {
  font-size: 10pt;
  text-align: left;
  background-color: #ffffe6;
  padding: 10px;
}

#ei, #hi, #ct, #cys, #swa {
  display: none;
}

#footnotes {
  text-align: left;
}

input {
  margin-right: 10px;
  margin-left: 20px;
}

video {
  max-width: 100%;
  margin-top: -20px;
}

a {
  color: #002db3;
  text-decoration: none;
}

div {
  text-align: center;
  margin: auto;
}

.bdiv {
  background-color: #ffffff;
  position: relative;
  border-radius: 10px;
  width: 20%;
  margin: auto;
  margin-right: 5px;
  padding: 5px;
  height: 110px;
  flex: 1;
}

.button {
  color: #1A2B53;
  font-family: "Roboto Mono", monospace;
  font-optical-sizing: auto;
  font-weight: 600;
  font-style: normal;
  font-size: 18pt;
}

.button_name {
  color: #DA2020;
  font-family: "Homemade Apple", cursive;
  font-weight: 400;
  font-style: normal;
  text-align: center;
}

.form {
  text-align: left;
  line-height: 35px; 
  margin-top: -10px;
}

table {
  margin-left: auto;
  margin-right: auto;
  text-align: center;
  padding: 10px;
  border-spacing: 5px;
  border-radius:10px;
  margin-top: -15px;
}

#cys hr {
  border: 1px solid #cccccc ;
}

h1 {
  color: #DA2020;
}

td {
  background-color: #ffffff;
  border-radius: 5px;
  padding:5px;
  vertical-align: top;
}

.main_ask {
  padding: 10px;
  font-size: 18pt;
}

p {
  text-align: left;
  padding-left: 50px;
  padding-right: 50px;
}

h2 {
  text-decoration: none;
}

.phonediv {
  display: none;
}

.vizdiv {
  display: block;
}

button {
  padding: 5px 15px;
  -webkit-border-radius: 5px;
  border-radius: 5px;
  font-size: 12pt;
  margin-top: 20px;
}

input[type=text] {
  padding: 5px 15px;
  -webkit-border-radius: 5px;
  border-radius: 5px;
  font-size: 12pt;
}

select {
  padding: 5px 15px;
  -webkit-border-radius: 5px;
  border-radius: 5px;
  font-size: 12pt;
}

option {
  padding: 5px 15px;
  -webkit-border-radius: 5px;
  border-radius: 5px;
  font-size: 12pt;
}

#info {
  padding-left: 2px;
  padding-right: 2px;
  font-size: 20pt;
}

@media
    only screen 
    and (max-width: 760px), (min-device-width: 768px) 
    and (max-device-width: 1024px)  {

    /* Force table to not be like tables anymore */
    table, td, th, tr {
      display: block;
    }

    table {
      margin-left: auto;
      margin-right: auto;
      text-align: center;
      width: 80vw;
    }

    tr {
      margin: 0 0 1rem 0;
    }
      
    td {
      border: none;
      border-bottom: 1px solid #eee;
      position: relative;
      padding-left: 50%;
      margin-bottom: 5px;
    }

    td:before {
      position: absolute;
      top: 0;
      left: 6px;
      width: 45%;
      padding-right: 10px;
      white-space: nowrap;
      margin-bottom: 5px;
    }

    .expand_box{
      padding: 0px;
      margin-top: -40px;
    }

    p {
        padding-left: 5px;
        padding-right: 5px;
    }
}

/* Pasted from https://www.w3schools.com/howto/howto_css_image_gallery.asp */

div.gallery {
  border: 1px solid #ccc;
}

div.gallery:hover {
  border: 1px solid #777;
}

div.gallery img {
  width: auto;
  /* height: auto; */
  height: 180px;
}

div.desc {
  padding: 15px;
  text-align: center;
}

* {
  box-sizing: border-box;
}

#left_div {
  width: 50%;
  float: left;
  padding: 20px;
  text-align: left;
}

#right_div {
  width: 50%;
  padding: 20px;
  text-align: left; 
  margin-left: 50%;
}

.responsive {
  padding: 0 6px;
  float: left;
  width: 24.99999%;
}

@media only screen and (max-width: 700px) {
  .responsive {
    width: 49.99999%;
    margin: 6px 0;
  }

}

@media only screen and (max-width: 500px) {
  .responsive {
    width: 100%;
  }

  #left_div {
    width: 90%;
    float: none;
    padding: 10px;
    text-align: left;
  }

  #right_div {
    width: 90%;
    padding: 10px;
    text-align: left;
    margin-left: 0%;
  }
}

.clearfix:after {
  content: "";
  display: table;
  clear: both;
}

